--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,14 @@ div {
     align-items: center;
 }
 
-.dog-container {
+#btn-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;  
+    gap: 10px;
+}
+
+.pic-container {
     margin-top: 20px;
     width: 300px;
     height: 300px;
@@ -23,7 +30,7 @@ div {
     align-items: center;
 }
 
-.dog-container img {
+.pic-container img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover; 
